--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  image_cropper: ^5.0.0
+  image_cropper: ^4.0.1
   image_picker: ^1.0.4
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  gallery_saver: ^2.3.2
 
 flutter:
   uses-material-design: true
