--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dev_dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
   gallery_saver: ^2.3.2
+  dio: ^5.3.3
+  flutter_dotenv: ^5.1.0
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - lib/constants/.env
