--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
   gallery_saver: ^2.3.2
   dio: ^5.3.3
   flutter_dotenv: ^5.1.0
+  mask_text_input_formatter: ^2.5.0
 
 flutter:
   uses-material-design: true
